--- a/summarizer/Dockerfile
+++ b/summarizer/Dockerfile
@@ -7,6 +7,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app
 
+# Run the script to download the model
+RUN python download_model.py
+
 EXPOSE 8000
 
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
