--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,4 +1,4 @@
-name: Deploy to Azure Container Instance
+name: CI/CD Pipeline
 
 on:
   push:
@@ -15,12 +15,12 @@ jobs:
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      #- name: Build the Docker image
-      #  run: |
-      #    cd summarizer
-      #    docker build . --file Dockerfile --tag ${{ secrets.REGISTRY_NAME }}/infosys_text-summarization:group # saved_model/model.safetensors -> missing (can't push 1.5 GB file size)
-      #    docker push ${{ secrets.REGISTRY_NAME }}/infosys_text-summarization:group
+        
+      - name: Build and push Docker image
+        run: |
+          cd summarizer
+          docker build . --file Dockerfile --tag ${{ secrets.REGISTRY_NAME }}/infosys_text-summarization:group
+          docker push ${{ secrets.REGISTRY_NAME }}/infosys_text-summarization:group
 
       - name: 'Login via Azure CLI'
         uses: azure/login@v1 
